[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reproschema_to_fhir"
version = "0.1.0"
description = "Create FHIR resources from ReproSchema"
author = [
    "Evan Ng",
    "Alistair Johnson"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.4",
    "jupyter>=1.0.0",
    "nltk>=3.5",
    "tqdm>=4.31.1",
    "pip>=20.3.3",
    "reproschema>=0.7.0",
    "fhir.resources>=v6.2.2",
    "python-dotenv>=1.0.0",
    "pytest>= 7.1.3"

]

[tool.hatchling]
src = "src/reproschema_to_fhir"
test = "tests"